Skip to content

UPnP fails to fetch all media items

Using VLC to browse/play media from a DLNA DMS.

VLC sends a BrowseDirectChildren request with no RequestedCount limit to get the media items (this is fine).

If the DMS returns a subset of results VLC displays the results returned but does not issue a request for the remainder of the media items.

For example, if the DMS returns NumberReturned=100 TotalMatches=500 VLC displays the 100 results returned and stops. It should issue another BrowseDirectChildren request specifying StartingIndex=100 to get more media items.

Although VLC is not specifying a RequestedCount limit, the DLNA rules require a DMS to return a subset of results if the response would exceed a maximum length (around 300kB?)

Problem confirmed with the Windows version of VLC - both 2.0.1 and the latest nightly build.

Nick

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information