upnp: fetch all media items correctly.

Close #6716

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>